# Xioudown

./: .gitignore  README.md  generated_level_.txt  make.ps1  testing.lnk
include/Xioudown/: Xioudown.h
src/: Astral.h  source_files.txt
src/Catalyst/: gameCatalyst.cpp  gameCatalyst.h  gameWindow.cpp  gameWindow.h
src/Container/: storage.cpp  storage.h
src/Essentials/: deepCopyMethods.cpp  objTextureSheet.h  paradigm.h  textureManager.h  timer.h
src/Essentials/game_io/: game_io.cpp  game_io.h
src/Essentials/player/: player.cpp  player.h
src/Math/: methods.cpp  methods.h  polygon.cpp  polygon.h
src/ObjAction/: game_actions.cpp  game_actions.h
src/Room/: pathway.cpp  room.cpp  room.h
src/Room/Level/: level.cpp  level.h
src/Room/Level_Room/: level_room.cpp  level_room.h
src/Room/Level_Room_Sub/: level_room_sub.cpp  level_room_sub.h
src/TangObj/: tangibleObj.cpp  tangibleObj.h
src/TangObj/Animated_Obj/: animatedObj.cpp  animatedObj.h
src/TangObj/Inanimate_Obj/: entry.cpp  inanimateObj.h  wall.cpp
src/UI/UI_Interface/: ui_interface.cpp  ui_interface.h
src/UI/interfaceManager/: interfaceManager.cpp  interfaceManager.h
src/UI/uiObj/: options_box.cpp  options_box.h  uiObj.h
src/app/: game.h  load_fonts.cpp  load_game.cpp  load_texturing.cpp  main.cpp
src/app/player_inventory/: player_inventory.cpp  player_inventory.h
test/integration/cmake-test/: CMakeLists.txt
test/integration/cmake-test/include/xioudown/: game_window.h  methods.h  paradigm.h  polygon.h
test/integration/cmake-test/src/game/: main.cpp
test/integration/cmake-test/src/xioudown/: game_io.cpp  game_window.cpp  methods.cpp
test/integration/grid-test-1/: main.cpp  source_files.txt
test/integration/sandbox/: generated_level_.html  generated_level_.txt  source_files.txt  testing.lnk
test/integration/sandbox/app/: game.h  load_fonts.cpp  load_game.cpp  load_texturing.cpp  main.cpp
test/integration/sandbox/app/player_inventory/: player_inventory.h
test/integration/test-1/: CMakeLists.txt  main.cpp
test/integration/test-2/: CMakeLists.txt  Makefile  cmake_instructions.md  logger.main  main.cpp  make.ps1
test/integration/test-2/cmake/: sdl2-config.cmake
test/integration/test-2/include/: aspects.h  client.h  common.h  entity.h  game_io.h  io_methods.h  ui_element.h
test/integration/test-2/lib/Xioudown/: CMakeLists.txt  main.cpp
test/integration/test-2/lib/Xioudown/include/: game_io.h  game_window.h  grid.h  io.h  media.h  polygon.h  utils.h  window.h  xioudown.h  xioudown_predefs.h
test/integration/test-2/lib/Xioudown/src/: game_io.cpp  game_window.cpp  grid.cpp  io.cpp  polygon.cpp  utils.cpp  window.cpp  xioudown.cpp
test/integration/test-2/src/: aspects.cpp  client.cpp  entity.cpp  game_io.cpp
test/integration/test-3/: test-3.sln
test/integration/test-3/test-3/: main.cpp  test-3.vcxproj
test/integration/test-3/test-3/Debug/: test-3.exe.recipe  vc142.idb
test/integration/test-3/test-3/Debug/test-3.tlog/: test-3.lastbuildstate
